deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rdf-contrib-collector-svc
  namespace: ryakadevforum
spec:
  selector:
    app: rdf-contrib-collector-svc
  type: ClusterIP
  ports:
  - name: rdf-contrib-collector-svc
    protocol: TCP
    port: 80
    targetPort: 8000
